welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: not found: value nb
ecritMessage(nb)
             ^Diagonal:17: error: not found: value nb
nb=nb+1}
^