welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {

var x=0
var y =0





def Diag1() {
setPos(x,y)
ecritMessage(nb)
x=x-1
y=y+1

nb=nb+1}

while( !estFaceMur() ) {
	Diag1()

}
x=x+1
}
